--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,7 +15,7 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.2.4",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "typescript": "^4.3.2",
     "web-vitals": "^1.1.2"
   },
